--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,40 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white !important;
+}
+
+.App-content a {
   color: white;
+  text-decoration: none;
+}
+
+.App-content a:hover {
+  color: red;
+}
+
+.search_form {
+  display: flex;
+  flex-direction: column;
+  width: 20em;
+  align-items: center;
+}
+
+.search_form #search {
+  border: none;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 100%;
+  border-radius: 30px;
+  outline: 3px solid #0062ff;
+}
+
+.search_form button {
+  width: 50%;
+  padding: 6px;
+  border: none;
+  border-radius: 15px;
+  background-color: hotpink;
+  color: white;
+  cursor: pointer;
 }
